--- a/automation/package.json
+++ b/automation/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "telegram": "node src/telegram-bot.js",
     "generate-video": "node scripts/generate-video.js",
     "post-content": "node scripts/post-content.js",
     "monitor-comments": "node scripts/monitor-comments.js",
@@ -17,6 +18,7 @@
     "express": "^4.18.2",
     "googleapis": "^128.0.0",
     "node-cron": "^3.0.3",
+    "node-telegram-bot-api": "^0.64.0",
     "openai": "^4.20.0",
     "instagram-private-api": "^1.45.3",
     "tiktok-api": "^0.4.2"
