--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
 # Production environment variables
-VITE_API_URL=http://187.77.20.240:3001
+VITE_API_URL=https://credx-1t7z.onrender.com
 VITE_MASTERCLASS_URL=https://credxme.com/masterclass
